# touda_wifi_float

./: .gitignore  CHANGELOG.md  LICENSE  README.md  compile.bat  init.py  init_compile.json  main.py  main_compile.json  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
config/: account_0.toml  links.toml
module/: config.py
output/: 点我配置.bat
plugins/: plugin_sdk.py
plugins/bilibili/: main.py
plugins/example/: main.py  readme.md
plugins/切换ip/: main.py  readme.md
plugins/汕大服务号/: main.py  readme.md
scripts/: gen_nuitka_plugin_deps.py
src/: __init__.py  config.py  logging_config.py  plugin_manager.py  touda.py  tray.py  update_checker.py  win_float_ball.py
ui/: __init__.py  float_ball.py  tray.py
ui/components/: __init__.py  frameless_dialog.py  profile.py  update_dialog.py  waterball.py
ui/windows/: __init__.py  drag_window.py  settings_window.py
