[project]
name = "touda-wifi-float"
version = "1.4.1"
description = "汕大wifi、webvpn登录工具，自定义个性化插件，内置汕大服务号插件"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "auto-py-to-exe==2.47.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.5",
    "bleach==6.2.0",
    "bottle==0.13.4",
    "bottle-websocket==0.2.9",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "darkdetect==0.8.0",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "eel==0.18.2",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "future==1.0.0",
    "gevent==25.8.2",
    "gevent-websocket==0.10.1",
    "greenlet==3.2.4",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "lxml==6.0.1",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.1.7",
    "mini-racer>=0.14.1",
    "mistune==3.1.4",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nuitka==2.8.1",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pefile==2023.2.7",
    "pickleshare==0.7.5",
    "platformdirs==4.5.0",
    "pluggy>=1.6.0",
    "prompt-toolkit==3.0.52",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.19.2",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pyotp==2.9.0",
    "pyparsing==3.2.3",
    "pyside6==6.9.2",
    "pyside6-addons==6.9.2",
    "pyside6-essentials==6.9.2",
    "pyside6-fluent-widgets==1.8.7",
    "pysidesix-frameless-window==0.7.3",
    "python-dateutil==2.9.0.post0",
    "pywin32==311",
    "pywin32-ctypes==0.2.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "setuptools==80.9.0",
    "shiboken6==6.9.2",
    "six==1.17.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "tinycss2==1.4.0",
    "tomlkit==0.13.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "yarg==0.1.9",
    "zope-event==5.1.1",
    "zope-interface==7.2",
    "zstandard==0.25.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
