[project]
name = "touda-wifi-float"
version = "1.4.7.2"
description = "汕大wifi、webvpn登录工具，自定义个性化插件，内置汕大服务号插件"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13",
    "lxml>=6.1.0",
    "pluggy>=1.6.0",
    "pyside6>=6.9",
    "pyside6-fluent-widgets>=1.8",
    "pysidesix-frameless-window>=0.7",
    "pyotp>=2.9",
    "pywin32>=310",
    "requests>=2.33.0",
    "tomlkit>=0.13",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "nuitka>=2.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
