[project]
name = "touda-wifi-float"
version = "1.4.7.3"
description = "汕大wifi、webvpn登录工具，自定义个性化插件，内置汕大服务号插件"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.15.0",
    "lxml==7.0.0a3",
    "pluggy>=1.6.0",
    "pyside6==6.11.1",
    "pyside6-fluent-widgets>=1.8",
    "pysidesix-frameless-window>=0.7",
    "pyotp==2.10.0",
    "pywin32==312",
    "requests==2.34.2",
    "tomlkit==0.15.0",
    "urllib3>=2.7.0",
    "charset-normalizer==3.4.7",
    "pip==26.1.2",
    "pyside6-addons==6.11.1",
    "pyside6-essentials==6.11.1",
    "shiboken6==6.11.1",
    "soupsieve==2.8.4",
    "typing-extensions==4.16.0",
]

[project.optional-dependencies]
dev = [
    "nuitka>=2.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
